--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,11 @@
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
                             "src/styles.scss"
                         ],
-                        "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js", "node_modules/jquery/dist/jquery.min.js"]
+                        "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js",
+                            "node_modules/jquery/dist/jquery.min.js",
+                            "https://unpkg.com/scrollreveal",
+                            "./assets/app.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
