--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,7 @@
                         ],
                         "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js",
                             "node_modules/jquery/dist/jquery.min.js",
-                            "https://unpkg.com/scrollreveal",
-                            "./assets/app.js"
+                            "./node_modules/scrollreveal/dist/scrollreveal.js"
                         ]
                     },
                     "configurations": {
