--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
+    "scrollreveal": "^4.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
