--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-scrollreveal": "^3.0.0",
     "rxjs": "~7.4.0",
     "scrollreveal": "^4.0.9",
     "tslib": "^2.3.0",
