--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^5.1.3",
+    "bootstrap4-toggle": "^3.6.1",
     "jquery": "^3.6.0",
+    "ngx-slide-toggle": "^0.1.1",
     "rxjs": "~7.4.0",
     "scrollreveal": "^4.0.9",
     "tslib": "^2.3.0",
