--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,11 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
                             "src/styles.scss"
                         ],
                         "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js",
-                            "node_modules/jquery/dist/jquery.min.js",
                             "./node_modules/scrollreveal/dist/scrollreveal.js"
                         ]
                     },
@@ -100,6 +100,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.scss"
                         ],
                         "scripts": []
