--- a/package.json
+++ b/package.json
@@ -1,59 +1,64 @@
 {
-  "name": "ir4lab",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.3.6",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^13.3.6",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "@fortawesome/angular-fontawesome": "^0.10.2",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "bootstrap": "^5.1.3",
-    "bootstrap4-toggle": "^3.6.1",
-    "jquery": "^3.6.0",
-
-    "ngx-scrollreveal": "^3.0.0",
-   
-    "ngx-slide-toggle": "^0.1.1",
-
-    
-
-    "rxjs": "~7.4.0",
-
-    "scrollreveal": "^4.0.9",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.5",
-    "@angular/cli": "~13.1.4",
-    "@angular/compiler-cli": "~13.1.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/jquery": "^3.5.14",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
-  }
+    "name": "ir4lab",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~13.1.0",
+        "@angular/cdk": "^13.3.6",
+        "@angular/common": "~13.1.0",
+        "@angular/compiler": "~13.1.0",
+        "@angular/core": "~13.1.0",
+        "@angular/forms": "~13.1.0",
+        "@angular/material": "^13.3.6",
+        "@angular/platform-browser": "~13.1.0",
+        "@angular/platform-browser-dynamic": "~13.1.0",
+        "@angular/router": "~13.1.0",
+        "@fortawesome/angular-fontawesome": "^0.10.2",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "bootstrap": "^5.1.3",
+        "bootstrap4-toggle": "^3.6.1",
+        "jquery": "^3.6.0",
+        "ngx-scrollreveal": "^3.0.0",
+        "rxjs": "~7.4.0",
+        "scrollreveal": "^4.0.9",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^13.3.5",
+        "@angular/cli": "~13.1.4",
+        "@angular/compiler-cli": "~13.1.0",
+        "@types/jasmine": "~3.10.0",
+        "@types/jquery": "^3.5.14",
+        "@types/node": "^12.11.1",
+        "jasmine-core": "~3.10.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.1.0",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "typescript": "~4.5.2"
+    },
+    "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.1.4.",
+    "main": "karma.conf.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/omarelalami/ir4lab.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/omarelalami/ir4lab/issues"
+    },
+    "homepage": "https://github.com/omarelalami/ir4lab#readme"
 }
